fixing overflow problems

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 } */
+@media (max-width: 600px) {
+  *{
+    overflow-x: hidden;
+  }
+  
+
+  
+
+}
