--- a/src/Pages/Contact.module.css
+++ b/src/Pages/Contact.module.css
@@ -72,3 +72,6 @@
 
 
 
+.imageBackground{
+    overflow-y: hidden;
+}
