--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -175,3 +175,8 @@
     
 }
 
+.navbar li{
+    padding: 1em;
+}
+
+
